@@ -41,6 +41,7 @@ Version 1.3.8+svn:
    * fixed a server side bug with could cause invalid utf-8 being send to a
      client.
    * display the era id for not installed eras in the lobby.
+   * display the scenario id for unknown scenarios in the lobby.
  * units:
    * balancing changes:
      * created undead variations for the 'bat' and 'gryphon' race
